--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation roomRuntime
     kapt roomCompiler
     implementation roomKtx
+
+    implementation dagger
+    kapt daggerCompiler
 }
