Shortcuts and widgets database update refactoring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    viewBinding {
+        enabled = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 apply from: "$rootDir/deps/deps_versions.gradle"
@@ -38,6 +49,7 @@ dependencies {
 
 
     implementation roomRuntime
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt roomCompiler
     implementation roomKtx
 
